--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <img src="images/illustration-hero.svg"/>
       </div>
       <div class="osc--mainText">
-        Order Summary You can now listen to millions of songs, audiobooks, and
+        <h2> Order Summary </h2>
+        You can now listen to millions of songs, audiobooks, and
         podcasts on any device anywhere you like!
       </div>
 
