Update: Estrutura HTML e estilo
Construindo a estrutura do html e do css para os elementos do modal ficarem mais estilizados com a proposta.

--- a/index.html
+++ b/index.html
@@ -27,23 +27,36 @@
   </head>
   <body>
     <div class="osc--modal">
-      <div class="osc--topImage">
-        <img src="images/illustration-hero.svg"/>
-      </div>
-      <div class="osc--mainText">
-        <h2> Order Summary </h2>
-        You can now listen to millions of songs, audiobooks, and
-        podcasts on any device anywhere you like!
-      </div>
+      <div class="osc--topImage"></div>
+      <section class="osc--section">
+        <div class="osc--mainText">
+          <h2>Order Summary</h2>
+          You can now listen to millions of songs, audiobooks, and podcasts on
+          any device anywhere you like!
+        </div>
 
-      <div class="osc--plan">Annual Plan $59.99/year Change</div>
-      <div class="osc--btns">Proceed to Payment Cancel Order</div>
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Léo Moura do Front End</a>.
-      </div>
+        <div class="osc--plan">
+          <div class="osc--plan-text">
+            <span> Annual Plan </span> <span>$59.99/year </span>
+          </div>
+        </div>
+        <div class="osc--btns">
+          <br />
+          <input
+            class="btn--payment"
+            type="button"
+            value="Proceed to Payment"
+          />
+          <br />
+          <input  class="btn--cancelOrder" type="button" value="Cancel Order" />
+        </div>
+        <div class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Cybord Leunardu</a>.
+        </div>
+      </section>
     </div>
   </body>
 </html>
