--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 
         <div class="osc--plan">
           <div class="osc--plan-text">
-            <span> Annual Plan </span> <span>$59.99/year </span>
+            <div>
+              <div>Annual Plan</div>
+              <div>$59.99/year</div>
+            </div>
+            <div class="change">Change</div>
           </div>
         </div>
         <div class="osc--btns">
@@ -48,7 +52,7 @@
             value="Proceed to Payment"
           />
           <br />
-          <input  class="btn--cancelOrder" type="button" value="Cancel Order" />
+          <input class="btn--cancelOrder" type="button" value="Cancel Order" />
         </div>
         <div class="attribution">
           Challenge by
