--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
     <title>Frontend Mentor | Order summary card</title>
-
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
@@ -33,15 +31,15 @@
           <h2>Order Summary</h2>
           You can now listen to millions of songs, audiobooks, and podcasts on
           any device anywhere you like!
-        </div>
+          </div>
 
         <div class="osc--plan">
           <div class="osc--plan-text">
             <div>
-              <div>Annual Plan</div>
-              <div>$59.99/year</div>
+              <div class="osc--Annualplan">Annual Plan</div>
+              <div class="osc--Priceplan">$59.99/year</div>
             </div>
-            <div class="change">Change</div>
+            <input class="osc--btnChange" type="button" value="Change"></input>
           </div>
         </div>
         <div class="osc--btns">
